--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-camera": "^4.2.1",
-    "react-native-image-picker": "^5.3.1"
+    "react-native-image-picker": "^5.3.1",
+    "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
