--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.71.6",
     "react-native-camera": "^4.2.1",
     "react-native-image-picker": "^5.3.1",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
