--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-camera": "^4.2.1",
+    "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-picker": "^5.3.1",
     "react-native-image-zoom-viewer": "^3.0.1",
-    "react-native-swiper": "^1.6.0"
+    "react-native-swiper": "^1.6.0",
+    "react-native-web": "~0.18.10",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
