--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-ml-kit/text-recognition": "^1.2.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@tensorflow-models/mobilenet": "^2.1.0",
+    "@tensorflow/tfjs": "^4.5.0",
     "expo": "~48.0.11",
     "expo-camera": "^13.2.1",
     "expo-media-library": "^15.2.3",
@@ -26,9 +27,7 @@
     "react-native-image-picker": "^5.3.1",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-swiper": "^1.6.0",
-    "react-native-text-recognition": "^1.0.0",
-    "react-native-web": "~0.18.10",
-    "tesseract.js": "^4.0.5"
+    "react-native-text-recognition": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
